giropops-senhas/manifests/overlays/kind/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: giropops-senhas
  namespace: giropops-senhas
spec:
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 2
      maxUnavailable: 1
  template:
    spec:
      containers:
      - name: giropops-senhas
        resources:
          requests:
            cpu: "0.15"
            memory: 128Mi
          limits:
            memory: 256Mi
            cpu: "0.25"
