giropops-senhas/manifests/overlays/kind/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: giropops-senhas
  namespace: giropops-senhas
spec:
  rules:
  - host: giropops-senhas.kubernetes.docker.internal
